# pablowsky_navigation

./: CMakeLists.txt  package.xml
config/: navigation.rviz  pablowsky_footprint.yaml
config/dwa/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: 2dnav.launch  amcl.launch  gmapping.launch  slam.launch
launch/includes/: 2dnav_dwa.launch  nav_common.launch
maps/42_fab_lab/: map.pgm  waypoints.yaml
maps/42_fab_lab_rear/: map.pgm
scripts/: navigation_goals_as_marker
